--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+  <meta name="6a97888e-site-verification" content="bfa9a3b9f8bf15be1ed4520b9b542786">
   <meta charset="UTF-8">
-  <title>Načítání obsahu…</title>
-
-  <!-- Styl -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Načítání obsahu (18+)</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding-top: 50px; background-color: #fff; }
-    .ad { margin: 20px auto; width: 300px; height: 250px; background-color: #f0f0f0; }
-    .timer { font-size: 24px; margin-top: 20px; }
-    a { text-decoration: none; color: blue; }
+    body { font-family: Arial, sans-serif; text-align: center; padding: 60px 20px; background: #111; color: #fff; }
+    h2 { font-size: 28px; }
+    .timer { font-size: 32px; color: #ff4444; margin: 20px 0; }
+    .ad { margin: 30px auto; width: 100%; max-width: 400px; min-height: 250px; background: #222; border: 1px solid #444; padding: 10px; }
+    a { color: #00aaff; font-size: 18px; }
+    .warning { color: #ff6666; margin-bottom: 30px; }
   </style>
-
-  <!-- Timer a redirect -->
+</head>
+<body>
+  <div class="warning">⚠️ 18+ NSFW obsah – pouze pro dospělé. Stránka používá cookies pro reklamy.</div>
+  
+  <h2>Obsah se načítá...</h2>
+  <p>Za <span id="timer">10</span> sekund přesměrování na fotku</p>
+  
+  <!-- REKLAMA – vlož sem kód od Adsterra/ExoClick (interstitial/popunder = top CPM pro NSFW 2026) -->
+  <div class="ad">
+    Reklama se načítá...<br>
+    <!-- Příklad Adsterra interstitial: zaregistruj se a vezmi kód -->
+  </div>
+  
+  <p><a href="#" id="skip">Přejít hned (skip)</a></p>
+  
   <script>
-    let seconds = 10; // čas v sekundách
+    let seconds = 10;
+    const timerEl = document.getElementById('timer');
+    const skipEl = document.getElementById('skip');
+    const params = new URLSearchParams(window.location.search);
+    const targetUrl = params.get('url') || 'https://example.com'; // fallback
+
     function countdown() {
-      document.getElementById('timer').innerText = seconds;
-      if (seconds === 0) {
-        const params = new URLSearchParams(window.location.search);
-        const url = params.get('url') || 'https://example.com'; // fallback
-        window.location.href = url;
+      timerEl.textContent = seconds;
+      if (seconds <= 0) {
+        window.location.href = targetUrl;
       } else {
         seconds--;
         setTimeout(countdown, 1000);
       }
     }
+
+    skipEl.onclick = (e) => {
+      e.preventDefault();
+      window.location.href = targetUrl;
+    };
+
     window.onload = countdown;
   </script>
-</head>
-<body>
-  <h2>Obsah se načítá…</h2>
-  <p>Za <span id="timer">10</span> sekund budete přesměrováni na fotku</p>
-
-  <!-- Místo pro reklamy -->
-  <div class="ad">
-    <!-- Zde vložíš reklamní kód od sítě (Adsterra/PropellerAds) -->
-    REKLAMA
-  </div>
-
-  <!-- Přímý link pro rychlé přesměrování -->
-  <p><a href="#" onclick="window.location.href=new URLSearchParams(window.location.search).get('url')">Přejít hned</a></p>
 </body>
 </html>
